envoy-scoped-route.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      protocol: TCP
      address: 127.0.0.1
      port_value: 9901
static_resources:
  listeners:
  - name: my_listener
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 13333
    filter_chains:
    - filters:
      # The HTTP connection manager is the only network filter.
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  path: "/"
                route:
                  cluster: my_cluster1
          scoped_routes:
            name: scoped_route
            scope_key_builder:
              fragments:
                - header_value_extractor:
                    name: X-Route-Selector
                    element_separator: ,
                    element:
                      separator: =
                      key: vip
            scoped_route_configurations_list:
              scoped_route_configurations:
                - name: route-scope1
                  route_configuration_name: local_route
                  key:
                    fragments:
                      - string_key: 33333
                - name: route-scope2
                  route_configuration_name: local_route
                  key:
                    fragments:
                      - string_key: 33334
          http_filters:
          - name: envoy.filters.http.router
  clusters:
  - name: my_cluster1
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    protocol_selection: USE_DOWNSTREAM_PROTOCOL
    http2_protocol_options: {}
    load_assignment:
      cluster_name: my_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 0.0.0.0
                port_value: 33333
  - name: my_cluster2
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    protocol_selection: USE_DOWNSTREAM_PROTOCOL
    http2_protocol_options: {}
    load_assignment:
      cluster_name: my_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 0.0.0.0
                port_value: 33334
